@@ -1,3 +1,7 @@
+2009-09-28  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	* gdb.base/pie-support.exp: Pass "quiet" flag to gdb_compile.
+
 2009-09-26  Pierre Muller  <muller@ics.u-strasbg.fr>
 	
 	New test for two watchpoints, with disabling of
